fixed flickering bug on chrome

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 
 * {
+    font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -17,9 +18,6 @@ html, body{
     -webkit-backface-visibility: hidden;
 }
 
-h1,h2,h3,h4, p{
-    font-family: 'Open Sans', sans-serif;
-}
 body{
     background-image: url("images/background.jpg");
     height: 100%;
@@ -608,7 +606,7 @@ Key Frames
         opacity: 0;
     }
     to{
-        
+        opacity: 0;
     }
 }
 
@@ -633,6 +631,7 @@ Key Frames
         opacity: 1;
     }
     to{
+        opacity: 0;
     }
 }
 
